--- a/index.html
+++ b/index.html
@@ -32,9 +32,49 @@
             красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
             — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+
         <ul class="intro__list">
-            <li>Часовых поясов 11</li>
+            <li>
+                <p class="intro__list-item">Часовых поясов
+                    <span class="intro__list-digit"> 11</span>
+                </p>
+            </li>
+            <li>
+                <p class="intro__list-item">Объектов природного наследия ЮНЕСКО
+                    <span class="intro__list-digit"> 12</span>
+                </p>
+            </li>
+            <li>
+                <p class="intro__list-item">Объектов культурного наследия ЮНЕСКО
+                    <span class="intro__list-digit"> 16</span>
+                </p>
+            </li>
+            <li>
+                <p class="intro__list-item">Природных заповедников
+                    <span class="intro__list-digit"> 105</span>
+                </p>
+            </li>
+            <li>
+                <p class="intro__list-item">Аэропортов
+                    <span class="intro__list-digit"> 241</span>
+                </p>
+            </li>
         </ul>
+
+        <section class="photo-grid">
+            <img class="photo-grid__item" src="./images/train.png" alt="вид из окна поезда">
+            <img class="photo-grid__item" src="./images/atharva-tulsi.png" alt="адхарва тулси">
+            <img class="photo-grid__item" src="./images/tuman.png" alt="туман">
+            <img class="photo-grid__item" src="./images/sochi.png" alt="Сочи">
+            <img class="photo-grid__item" src="./images/arisa-chattasa.png" alt="арисса-чатасса">
+            <img class="photo-grid__item" src="./images/baikal.png" alt="Байкал">
+            <img class="photo-grid__item" src="./images/elbrus.png" alt="Эльбрус">
+            <img class="photo-grid__item" src="./images/stanislav-kondratiev.png" alt="Станислав Кондратьев">
+            <img class="photo-grid__item" src="./images/kamchatka.png" alt="Камчатка">
+            <img class="photo-grid__item" src="./images/kamchatka2.png" alt="Камчатка 2">
+            <img class="photo-grid__item" src="./images/baikal2.png" alt="Байкал 2">
+            <img class="photo-grid__item" src="./images/ergaki.png" alt="Ергаки">
+        </section>
 
     </section>
 
