--- a/index.html
+++ b/index.html
@@ -78,4 +78,25 @@
 
     </section>
 
+    <section class="places">
+        <article class="place">
+            <h2 class="place__title">Куршская коса</h2>
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+                спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+                Уникальная природная зона на краю российского анклава.
+            </p>
+            <p class="place__paragraph">
+                На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по
+                соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших
+                приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах
+                стального, прохладного моря.
+            </p>
+            <img class="place__image" src="./images/kursk_kosa.png" alt="Куршская коса">
+            <div class="place__website">
+                <h3 class="place__url-heading">url</h3>
+                <a href="#" class="place__link">park-kosa.ru</a>
+            </div>
+        </article>
+    </section>
+
 </div>
