--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="./images/__logo.svg" alt="логотип сайта">
+            <img class="header__logo" src="./images/header-logo.svg" alt="логотип сайта">
             <ul class="header__lang-links">
                 <li class="header__lang-link header__lang-link_active">
                     <a href="#" class="header__lang-link-text">Ru</a>
@@ -23,7 +23,7 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-            <img class="lead__image" src="./images/__image.jpeg" alt="карта с путешествием по стране">
+            <img class="lead__image" src="./images/lead-polka.jpg" alt="карта с путешествием по стране">
             <h3 class="lead__caption">ваша полка — верхняя</h3>
         </section>
 
@@ -69,18 +69,18 @@
         </section>
 
             <section class="photo-grid">
-                <img class="photo-grid__item" src="./images/train.png" alt="вид из окна поезда">
-                <img class="photo-grid__item" src="./images/atharva-tulsi.png" alt="адхарва тулси">
-                <img class="photo-grid__item" src="./images/tuman.png" alt="туман">
-                <img class="photo-grid__item" src="./images/sochi.png" alt="Сочи">
-                <img class="photo-grid__item" src="./images/arisa-chattasa.png" alt="арисса-чатасса">
-                <img class="photo-grid__item" src="./images/baikal.png" alt="Байкал">
-                <img class="photo-grid__item" src="./images/elbrus.png" alt="Эльбрус">
-                <img class="photo-grid__item" src="./images/stanislav-kondratiev.png" alt="Станислав Кондратьев">
-                <img class="photo-grid__item" src="./images/kamchatka.png" alt="Камчатка">
-                <img class="photo-grid__item" src="./images/kamchatka2.png" alt="Камчатка 2">
-                <img class="photo-grid__item" src="./images/baikal2.png" alt="Байкал 2">
-                <img class="photo-grid__item" src="./images/ergaki.png" alt="Ергаки">
+                <img class="photo-grid__item" src="./images/train.jpg" alt="вид из окна поезда">
+                <img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="адхарва тулси">
+                <img class="photo-grid__item" src="./images/tuman.jpg" alt="туман">
+                <img class="photo-grid__item" src="./images/sochi.jpg" alt="Сочи">
+                <img class="photo-grid__item" src="./images/arisa-chattasa.jpg" alt="арисса-чатасса">
+                <img class="photo-grid__item" src="./images/baikal.jpg" alt="Байкал">
+                <img class="photo-grid__item" src="./images/elbrus.jpg" alt="Эльбрус">
+                <img class="photo-grid__item" src="./images/stanislav-kondratiev.jpg" alt="Станислав Кондратьев">
+                <img class="photo-grid__item" src="./images/kamchatka.jpg" alt="Камчатка">
+                <img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Камчатка 2">
+                <img class="photo-grid__item" src="./images/baikal2.jpg" alt="Байкал 2">
+                <img class="photo-grid__item" src="./images/ergaki.jpg" alt="Ергаки">
             </section>
 
         <section class="places">
@@ -101,7 +101,7 @@
                         стального, прохладного моря.
                     </p>
                 </div>
-                <img class="place__image" src="./images/kursk_kosa.png" alt="Куршская коса">
+                <img class="place__image" src="./images/kursk_kosa.jpg" alt="Куршская коса">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
                     <a href="#" class="place__link">park-kosa.ru</a>
@@ -124,7 +124,7 @@
                         в Мурманск.
                     </p>
                 </div>
-                <img class="place__image" src="./images/kola_peninsula.png" alt="Кольский полуостров">
+                <img class="place__image" src="./images/kola_peninsula.jpg" alt="Кольский полуостров">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
                     <a href="#" class="place__link">National Geographic</a>
@@ -148,7 +148,7 @@
                         косули. И знаменитые манулы — тоже обитатели Алтайского края.
                     </p>
                 </div>
-                <img class="place__image" src="./images/altai_window.png" alt="Алтай">
+                <img class="place__image" src="./images/altai_window.jpg" alt="Алтай">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
                     <a href="#" class="place__link">Facebook</a>
@@ -171,7 +171,7 @@
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
                     </p>
                 </div>
-                <img class="place__image" src="./images/winter__baikal.png" alt="Байкал">
+                <img class="place__image" src="./images/winter__baikal.jpg" alt="Байкал">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
                     <a href="#" class="place__link">https://vk.com/baikalmile</a>
@@ -190,7 +190,7 @@
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
                     </p>
                 </div>
-                <img class="place__image" src="./images/karel.png" alt="Байкал">
+                <img class="place__image" src="./images/karel.jpg" alt="Байкал">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
                     <a href="#" class="place__link">http://vodlozero.ru/</a>
