Исправил логику заголовков в хедере

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <li class="header__lang-link header__lang-link_active">
                     <a href="#" class="header__lang-link-text">Ru</a>
                 </li>
-                <li href="#" class="header__lang-link-text">En</a>
+                <li class="header__lang-link"> 
+                <a href="#" class="header__lang-link-text">En</a>
+                </li>
             </ul>
         </header>
         <section class="lead">
@@ -68,20 +70,20 @@
             </ul>
         </section>
 
-            <section class="photo-grid">
-                <img class="photo-grid__item" src="./images/train.jpg" alt="вид из окна поезда">
-                <img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="адхарва тулси">
-                <img class="photo-grid__item" src="./images/tuman.jpg" alt="туман">
-                <img class="photo-grid__item" src="./images/sochi.jpg" alt="Сочи">
-                <img class="photo-grid__item" src="./images/arisa-chattasa.jpg" alt="арисса-чатасса">
-                <img class="photo-grid__item" src="./images/baikal.jpg" alt="Байкал">
-                <img class="photo-grid__item" src="./images/elbrus.jpg" alt="Эльбрус">
-                <img class="photo-grid__item" src="./images/stanislav-kondratiev.jpg" alt="Станислав Кондратьев">
-                <img class="photo-grid__item" src="./images/kamchatka.jpg" alt="Камчатка">
-                <img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Камчатка 2">
-                <img class="photo-grid__item" src="./images/baikal2.jpg" alt="Байкал 2">
-                <img class="photo-grid__item" src="./images/ergaki.jpg" alt="Ергаки">
-            </section>
+        <section class="photo-grid">
+            <img class="photo-grid__item" src="./images/train.jpg" alt="вид из окна поезда">
+            <img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="адхарва тулси">
+            <img class="photo-grid__item" src="./images/tuman.jpg" alt="туман">
+            <img class="photo-grid__item" src="./images/sochi.jpg" alt="Сочи">
+            <img class="photo-grid__item" src="./images/arisa-chattasa.jpg" alt="арисса-чатасса">
+            <img class="photo-grid__item" src="./images/baikal.jpg" alt="Байкал">
+            <img class="photo-grid__item" src="./images/elbrus.jpg" alt="Эльбрус">
+            <img class="photo-grid__item" src="./images/stanislav-kondratiev.jpg" alt="Станислав Кондратьев">
+            <img class="photo-grid__item" src="./images/kamchatka.jpg" alt="Камчатка">
+            <img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Камчатка 2">
+            <img class="photo-grid__item" src="./images/baikal2.jpg" alt="Байкал 2">
+            <img class="photo-grid__item" src="./images/ergaki.jpg" alt="Ергаки">
+        </section>
 
         <section class="places">
             <article class="place">
