--- a/index.html
+++ b/index.html
@@ -202,9 +202,12 @@
 
 
         <section class="cover">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-                электричках.</h3>
+            <img class="cover__background" src="./images/cover-trains.jpg" alt="Картинка с поездами"/> 
+            <div class="cover__overlay">
+                <h2 class="cover__title">До Байкала «на собаках»</h2>
+                <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+                    электричках.</h3>
+            </div>
         </section>
 
         <footer class="footer">
