--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Проект: Путешествие по России</title>
-    <link rel="stylesheet" type="text/css" href="./vendor/normalize.css" />
     <link rel="stylesheet" type="text/css" href="./pages/index.css" />
+    <title>Проект: Путешествие по России</title>
 </head>
 
 <body>
@@ -22,14 +21,14 @@
                 </li>
             </ul>
         </header>
-        <section class="lead">
+        <main class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
-            <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <img class="lead__image" src="./images/lead-polka.jpg" alt="карта с путешествием по стране">
-            <h3 class="lead__caption">ваша полка — верхняя</h3>
-        </section>
+            <p class="lead__caption">ваша полка — верхняя</p>
+        </main>
 
-        <section class="intro">
+        <main class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
                 провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -42,35 +41,25 @@
             </p>
 
             <ul class="intro__list">
-                <li>
-                    <p class="intro__list-item">Часовых поясов
+                    <li class="intro__list-item">Часовых поясов
                         <span class="intro__list-digit"> 11</span>
-                    </p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Объектов природного наследия ЮНЕСКО
+                    </li>
+                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО
                         <span class="intro__list-digit"> 12</span>
-                    </p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Объектов культурного наследия ЮНЕСКО
+                    </li>
+                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО
                         <span class="intro__list-digit"> 16</span>
-                    </p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Природных заповедников
+                    </li>
+                    <li class="intro__list-item">Природных заповедников
                         <span class="intro__list-digit"> 105</span>
-                    </p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Аэропортов
+                    </li>
+                    <li class="intro__list-item">Аэропортов
                         <span class="intro__list-digit"> 241</span>
-                    </p>
-                </li>
+                    </li>
             </ul>
-        </section>
+        </main>
 
-        <section class="photo-grid">
+        <main class="photo-grid">
             <img class="photo-grid__item" src="./images/train.jpg" alt="вид из окна поезда">
             <img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="адхарва тулси">
             <img class="photo-grid__item" src="./images/tuman.jpg" alt="туман">
@@ -83,9 +72,9 @@
             <img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Камчатка 2">
             <img class="photo-grid__item" src="./images/baikal2.jpg" alt="Байкал 2">
             <img class="photo-grid__item" src="./images/ergaki.jpg" alt="Ергаки">
-        </section>
+        </main>
 
-        <section class="places">
+        <main class="places">
             <article class="place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__paragraph-container">
@@ -106,7 +95,7 @@
                 <img class="place__image" src="./images/kursk_kosa.jpg" alt="Куршская коса">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="#" class="place__link">park-kosa.ru</a>
+                    <a href="http://park-kosa.ru" target="blank" class="place__link">park-kosa.ru</a>
                 </div>
             </article>
 
@@ -129,7 +118,7 @@
                 <img class="place__image" src="./images/kola_peninsula.jpg" alt="Кольский полуостров">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="#" class="place__link">National Geographic</a>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blank" class="place__link">National Geographic</a>
                 </div>
             </article>
 
@@ -153,7 +142,7 @@
                 <img class="place__image" src="./images/altai_window.jpg" alt="Алтай">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="#" class="place__link">Facebook</a>
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blank" class="place__link">Facebook</a>
                 </div>
             </article>
 
@@ -176,7 +165,7 @@
                 <img class="place__image" src="./images/winter__baikal.jpg" alt="Байкал">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="#" class="place__link">https://vk.com/baikalmile</a>
+                    <a href="https://vk.com/baikalmile" target="blank" class="place__link">https://vk.com/baikalmile</a>
                 </div>
             </article>
 
@@ -195,42 +184,42 @@
                 <img class="place__image" src="./images/karel.jpg" alt="Байкал">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="#" class="place__link">http://vodlozero.ru/</a>
+                    <a href="http://vodlozero.ru" target="blank" class="place__link">http://vodlozero.ru/</a>
                 </div>
             </article>
-        </section>
+        </main>
 
 
-        <section class="cover">
+        <main class="cover">
             <img class="cover__background" src="./images/cover-trains.jpg" alt="Картинка с поездами"/> 
             <div class="cover__overlay">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-                    электричках.</h3>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+                    электричках.</p>
             </div>
-        </section>
+        </main>
 
         <footer class="footer">
             <nav class="footer__links">
                 <ul class="footer__links-list">
                     <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                        <a class="footer__link" href="https://yandex.ru/maps" target="blank">Карты</a>
                     </li>
                     <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://yandex.ru/pogoda/" target="_blank">Погода</a>
+                        <a class="footer__link" href="https://yandex.ru/pogoda/" target="blank">Погода</a>
                     </li>
                     <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://rasp.yandex.ru/" target="_blank">Расписание</a>
+                        <a class="footer__link" href="https://rasp.yandex.ru/" target="blank">Расписание</a>
                     </li>
                     <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://calendar.yandex.ru/" target="_blank">Календарь</a>
+                        <a class="footer__link" href="https://calendar.yandex.ru/" target="blank">Календарь</a>
                     </li>
                     <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://travel.yandex.ru/" target="_blank">Путешествия</a>
+                        <a class="footer__link" href="https://travel.yandex.ru/" target="blank">Путешествия</a>
                     </li>
                 </ul>
             </nav>
-            <a class="footer__copyright" href="https://vk.com/iforty" target="_blank">@ 2022. Сороколетов Иван</a>
+            <a class="footer__copyright" href="https://vk.com/iforty" target="blank">@ 2022. Сороколетов Иван</a>
         </footer>
     </div>
 </body>
