--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li class="header__lang-link header__lang-link_active">
                     <a href="#" class="header__lang-link-text">Ru</a>
                 </li>
-                <li class="header__lang-link"> 
-                <a href="#" class="header__lang-link-text">En</a>
+                <li class="header__lang-link">
+                    <a href="#" class="header__lang-link-text">En</a>
                 </li>
             </ul>
         </header>
@@ -41,21 +41,21 @@
             </p>
 
             <ul class="intro__list">
-                    <li class="intro__list-item">Часовых поясов
-                        <span class="intro__list-digit"> 11</span>
-                    </li>
-                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО
-                        <span class="intro__list-digit"> 12</span>
-                    </li>
-                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО
-                        <span class="intro__list-digit"> 16</span>
-                    </li>
-                    <li class="intro__list-item">Природных заповедников
-                        <span class="intro__list-digit"> 105</span>
-                    </li>
-                    <li class="intro__list-item">Аэропортов
-                        <span class="intro__list-digit"> 241</span>
-                    </li>
+                <li class="intro__list-item">Часовых поясов
+                    <span class="intro__list-digit"> 11</span>
+                </li>
+                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО
+                    <span class="intro__list-digit"> 12</span>
+                </li>
+                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО
+                    <span class="intro__list-digit"> 16</span>
+                </li>
+                <li class="intro__list-item">Природных заповедников
+                    <span class="intro__list-digit"> 105</span>
+                </li>
+                <li class="intro__list-item">Аэропортов
+                    <span class="intro__list-digit"> 241</span>
+                </li>
             </ul>
         </main>
 
@@ -118,7 +118,8 @@
                 <img class="place__image" src="./images/kola_peninsula.jpg" alt="Кольский полуостров">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blank" class="place__link">National Geographic</a>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blank"
+                        class="place__link">National Geographic</a>
                 </div>
             </article>
 
@@ -142,7 +143,8 @@
                 <img class="place__image" src="./images/altai_window.jpg" alt="Алтай">
                 <div class="place__website">
                     <h3 class="place__url-heading">url</h3>
-                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blank" class="place__link">Facebook</a>
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blank"
+                        class="place__link">Facebook</a>
                 </div>
             </article>
 
@@ -191,12 +193,16 @@
 
 
         <main class="cover">
-            <img class="cover__background" src="./images/cover-trains.jpg" alt="Картинка с поездами"/> 
-            <div class="cover__overlay">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-                    электричках.</p>
-            </div>
+            <a class="hover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
+                <div class="cover__background">
+                    <div class="cover__overlay">
+                        <h2 class="cover__title">До Байкала<br/>«на собаках»</h2>
+                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — &nbsp;путешествие от столицы до
+                            Байкала на
+                            электричках.</p>
+                    </div>
+                </div>
+            </a>
         </main>
 
         <footer class="footer">
