--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="lead__caption">ваша полка — верхняя</p>
         </main>
 
-        <main class="intro">
+        <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
                 провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -57,9 +57,9 @@
                     <span class="intro__list-digit"> 241</span>
                 </li>
             </ul>
-        </main>
+        </section>
 
-        <main class="photo-grid">
+        <div class="photo-grid">
             <img class="photo-grid__item" src="./images/train.jpg" alt="вид из окна поезда">
             <img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="адхарва тулси">
             <img class="photo-grid__item" src="./images/tuman.jpg" alt="туман">
@@ -72,9 +72,9 @@
             <img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Камчатка 2">
             <img class="photo-grid__item" src="./images/baikal2.jpg" alt="Байкал 2">
             <img class="photo-grid__item" src="./images/ergaki.jpg" alt="Ергаки">
-        </main>
+        </div>
 
-        <main class="places">
+        <section class="places">
             <article class="place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
@@ -189,45 +189,45 @@
                 </div>
                 <img class="place__image" src="./images/karel.jpg" alt="Байкал">
             </article>
-        </main>
+            </section>
 
 
-        <main class="cover">
-            <a class="hover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
-                <div class="cover__background">
-                    <div class="cover__overlay">
-                        <h2 class="cover__title">До Байкала<br />«на собаках»</h2>
-                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — &nbsp;путешествие от столицы до
-                            Байкала на
-                            электричках.</p>
+            <section class="cover">
+                <a class="hover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
+                    <div class="cover__background">
+                        <div class="cover__overlay">
+                            <h2 class="cover__title">До Байкала<br />«на собаках»</h2>
+                            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — &nbsp;путешествие от
+                                столицы до
+                                Байкала на
+                                электричках.</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </main>
+                </a>
+            </section>
 
-        <footer class="footer">
-            <nav class="footer__links">
-                <ul class="footer__links-list">
-                    <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://yandex.ru/maps" target="blank">Карты</a>
-                    </li>
-                    <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://yandex.ru/pogoda/" target="blank">Погода</a>
-                    </li>
-                    <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://rasp.yandex.ru/" target="blank">Расписание</a>
-                    </li>
-                    <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://calendar.yandex.ru/" target="blank">Календарь</a>
-                    </li>
-                    <li class="footer__links-list-item">
-                        <a class="footer__link" href="https://travel.yandex.ru/" target="blank">Путешествия</a>
-                    </li>
-                </ul>
-            </nav>
-            <a class="footer__copyright" href="https://vk.com/iforty" target="blank">@ 2022. Сороколетов Иван</a>
-        </footer>
+            <footer class="footer">
+                <nav class="footer__links">
+                    <ul class="footer__links-list">
+                        <li class="footer__links-list-item">
+                            <a class="footer__link" href="https://yandex.ru/maps" target="blank">Карты</a>
+                        </li>
+                        <li class="footer__links-list-item">
+                            <a class="footer__link" href="https://yandex.ru/pogoda/" target="blank">Погода</a>
+                        </li>
+                        <li class="footer__links-list-item">
+                            <a class="footer__link" href="https://rasp.yandex.ru/" target="blank">Расписание</a>
+                        </li>
+                        <li class="footer__links-list-item">
+                            <a class="footer__link" href="https://calendar.yandex.ru/" target="blank">Календарь</a>
+                        </li>
+                        <li class="footer__links-list-item">
+                            <a class="footer__link" href="https://travel.yandex.ru/" target="blank">Путешествия</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="footer__copyright" href="https://vk.com/iforty" target="blank">@ 2022. Сороколетов Иван</a>
+            </footer>
     </div>
 </body>
-
 </html>
