Зачем-то заставили удалить тег br

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <a class="hover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
                     <div class="cover__background">
                         <div class="cover__overlay">
-                            <h2 class="cover__title">До Байкала<br />«на собаках»</h2>
+                            <h2 class="cover__title">До Байкала «на собаках»</h2>
                             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — &nbsp;путешествие от
                                 столицы до
                                 Байкала на
