исправил ещё одну ошибку

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 
             <section class="cover">
-                <a class="hover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
+                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
                     <div class="cover__background">
                         <div class="cover__overlay">
                             <h2 class="cover__title">До Байкала «на собаках»</h2>
