--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 </li>
             </ul>
         </header>
-        <main class="lead">
+        <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <img class="lead__image" src="./images/lead-polka.jpg" alt="карта с путешествием по стране">
             <p class="lead__caption">ваша полка — верхняя</p>
-        </main>
+        </section>
 
         <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -59,7 +59,7 @@
             </ul>
         </section>
 
-        <div class="photo-grid">
+        <section class="photo-grid">
             <img class="photo-grid__item" src="./images/train.jpg" alt="вид из окна поезда">
             <img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="адхарва тулси">
             <img class="photo-grid__item" src="./images/tuman.jpg" alt="туман">
@@ -72,7 +72,7 @@
             <img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Камчатка 2">
             <img class="photo-grid__item" src="./images/baikal2.jpg" alt="Байкал 2">
             <img class="photo-grid__item" src="./images/ergaki.jpg" alt="Ергаки">
-        </div>
+        </section>
 
         <section class="places">
             <article class="place">
@@ -81,6 +81,7 @@
                     <h3 class="place__url-heading">url</h3>
                     <a href="http://park-kosa.ru" target="blank" class="place__link">park-kosa.ru</a>
                 </div>
+                <img class="place__image" src="./images/kursk_kosa.jpg" alt="Куршская коса">
                 <div class="place__paragraph-container">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта
@@ -96,7 +97,6 @@
                         стального, прохладного моря.
                     </p>
                 </div>
-                <img class="place__image" src="./images/kursk_kosa.jpg" alt="Куршская коса">
             </article>
 
             <article class="place">
@@ -106,6 +106,7 @@
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blank"
                         class="place__link">National Geographic</a>
                 </div>
+                <img class="place__image" src="./images/kola_peninsula.jpg" alt="Кольский полуостров">
                 <div class="place__paragraph-container">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                         которой на юг —
@@ -120,7 +121,6 @@
                         в Мурманск.
                     </p>
                 </div>
-                <img class="place__image" src="./images/kola_peninsula.jpg" alt="Кольский полуостров">
             </article>
 
             <article class="place">
@@ -130,6 +130,7 @@
                     <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blank"
                         class="place__link">Facebook</a>
                 </div>
+                <img class="place__image" src="./images/altai_window.jpg" alt="Алтай">
                 <div class="place__paragraph-container">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
@@ -145,7 +146,6 @@
                         косули. И знаменитые манулы — тоже обитатели Алтайского края.
                     </p>
                 </div>
-                <img class="place__image" src="./images/altai_window.jpg" alt="Алтай">
             </article>
 
             <article class="place">
@@ -154,6 +154,7 @@
                     <h3 class="place__url-heading">url</h3>
                     <a href="https://vk.com/baikalmile" target="blank" class="place__link">https://vk.com/baikalmile</a>
                 </div>
+                <img class="place__image" src="./images/winter__baikal.jpg" alt="Байкал">
                 <div class="place__paragraph-container">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
@@ -168,7 +169,6 @@
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
                     </p>
                 </div>
-                <img class="place__image" src="./images/winter__baikal.jpg" alt="Байкал">
             </article>
 
             <article class="place">
@@ -177,6 +177,7 @@
                     <h3 class="place__url-heading">url</h3>
                     <a href="http://vodlozero.ru" target="blank" class="place__link">http://vodlozero.ru/</a>
                 </div>
+                <img class="place__image" src="./images/karel.jpg" alt="Байкал">
                 <div class="place__paragraph-container">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                         сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров —
@@ -187,47 +188,44 @@
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
                     </p>
                 </div>
-                <img class="place__image" src="./images/karel.jpg" alt="Байкал">
             </article>
-            </section>
+        </section>
 
 
-            <section class="cover">
-                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
-                    <div class="cover__background">
-                        <div class="cover__overlay">
-                            <h2 class="cover__title">До Байкала «на собаках»</h2>
-                            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — &nbsp;путешествие от
-                                столицы до
-                                Байкала на
-                                электричках.</p>
-                        </div>
-                    </div>
-                </a>
-            </section>
+        <section class="cover">
+            <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
+                <div class="cover__background"></div>
+                <h2 class="cover__title">До Байкала «на собаках»</h2>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — &nbsp;путешествие от
+                    столицы до
+                    Байкала на
+                    электричках.</p>
+            </a>
+        </section>
 
-            <footer class="footer">
-                <nav class="footer__links">
-                    <ul class="footer__links-list">
-                        <li class="footer__links-list-item">
-                            <a class="footer__link" href="https://yandex.ru/maps" target="blank">Карты</a>
-                        </li>
-                        <li class="footer__links-list-item">
-                            <a class="footer__link" href="https://yandex.ru/pogoda/" target="blank">Погода</a>
-                        </li>
-                        <li class="footer__links-list-item">
-                            <a class="footer__link" href="https://rasp.yandex.ru/" target="blank">Расписание</a>
-                        </li>
-                        <li class="footer__links-list-item">
-                            <a class="footer__link" href="https://calendar.yandex.ru/" target="blank">Календарь</a>
-                        </li>
-                        <li class="footer__links-list-item">
-                            <a class="footer__link" href="https://travel.yandex.ru/" target="blank">Путешествия</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a class="footer__copyright" href="https://vk.com/iforty" target="blank">@ 2022. Сороколетов Иван</a>
-            </footer>
+        <footer class="footer">
+            <nav class="footer__links">
+                <ul class="footer__links-list">
+                    <li class="footer__links-list-item">
+                        <a class="footer__link" href="https://yandex.ru/maps" target="blank">Карты</a>
+                    </li>
+                    <li class="footer__links-list-item">
+                        <a class="footer__link" href="https://yandex.ru/pogoda/" target="blank">Погода</a>
+                    </li>
+                    <li class="footer__links-list-item">
+                        <a class="footer__link" href="https://rasp.yandex.ru/" target="blank">Расписание</a>
+                    </li>
+                    <li class="footer__links-list-item">
+                        <a class="footer__link" href="https://calendar.yandex.ru/" target="blank">Календарь</a>
+                    </li>
+                    <li class="footer__links-list-item">
+                        <a class="footer__link" href="https://travel.yandex.ru/" target="blank">Путешествия</a>
+                    </li>
+                </ul>
+            </nav>
+            <a class="footer__copyright" href="https://vk.com/iforty" target="blank">@ 2022. Сороколетов Иван</a>
+        </footer>
     </div>
 </body>
+
 </html>
